--- a/.env.defaults
+++ b/.env.defaults
@@ -130,3 +130,4 @@ FIREBASE_VAPID_KEY=BFayEBpwMTU9GQQpXgitIJkfx-SD8-ltrFb3wLTZWgA27MfBhG4948pe0eERl
 
 # Development
 REPORT_NEW_STRINGS=false
+AUTH_LOGGING=false
